// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetch more items 1`] = `
Object {
  "error": undefined,
  "handleContentToggle": [Function],
  "handleLoadMore": [Function],
  "isFetchingMore": false,
  "isLoading": false,
  "isOpen": true,
  "items": Array [],
}
`;

exports[`returns correct shape 1`] = `
Object {
  "error": undefined,
  "handleContentToggle": [Function],
  "handleLoadMore": [Function],
  "isFetchingMore": false,
  "isLoading": false,
  "isOpen": true,
  "items": Array [],
}
`;

exports[`schould load if it has items 1`] = `
Object {
  "error": undefined,
  "handleContentToggle": [Function],
  "handleLoadMore": [Function],
  "isFetchingMore": false,
  "isLoading": false,
  "isOpen": true,
  "items": Array [
    Object {
      "name": "item1",
    },
    Object {
      "name": "item2",
    },
  ],
}
`;
